--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2"
   }
 }
