--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qrcode-generator": "^1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.2.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
